<layout xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:android="http://schemas.android.com/apk/res/android">

<data>
    <variable
        name="viewModel"
        type="com.example.aimsapp.views.forms.FormViewModel" />
</data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.forms.SignaturePad">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/buttons_container"
        android:id="@+id/signature_pad_container">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="8dp"
            android:layout_above="@+id/signature_agreement" />

        <TextView
            android:id="@+id/signature_agreement"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:layout_marginBottom="16dp"
            android:layout_alignParentBottom="true"
            android:text="@string/agreement" />

        <com.github.gcacace.signaturepad.views.SignaturePad
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:bind="http://schemas.android.com/apk/res-auto"
            android:id="@+id/signature_pad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            bind:onStartSigning="@{activity.onStartSigning}"
            bind:onSigned="@{activity.onSigned}"
            bind:onClear="@{activity.onClear}" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:paddingTop="16dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_pad"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/clear_pad"
            android:enabled="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_signature"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/save_signature"
            android:enabled="false" />
    </LinearLayout>

</RelativeLayout>
</layout>